--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app_with_test_automatization",
-  "description": "Aplicação com teste automatizado.",
+  "description": "AplicaÃ§Ã£o com teste automatizado.",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "Mateus Santos Lemos",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.1.0"
+  }
 }
