--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^8.1.0"
+    "mocha": "^8.1.0",
+    "sinon": "^9.0.2"
   }
 }
